--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "components": "^0.1.0",
+    "firebase": "^9.9.0",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.1"
+    "eslint-config-next": "12.2.1",
+    "typescript": "^4.7.4"
   }
 }
